@@ -1,6 +1,10 @@
 ispCP ω 1.0.4 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2010-01-17 Sascha Bay
+	- GUI:
+		* Fixed #2170: "Domain expire" value gets lost on failure with Domain name
+
 2010-01-17 Thomas Wacker
 	- GUI:
 		* Fixed #2172: Support system - html tag shouldn't displayed
